k8s/mysql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mysql-db
  template:
    metadata:
      labels:
        component: mysql-db
    spec:
      volumes:
        - name: mysql-db-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: mysql-db
          image: mysql
          ports:
            - containerPort: 3306
#          livenessProbe:
#            tcpSocket:
#              port: 3306
          volumeMounts:
            - name: mysql-db-storage
              mountPath: /var/lib/mysql
