k8s/mysql-db-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-cluster-ip-service
spec:
  type: ClusterIP
  selector:
      component: mysql-db
#  sessionAffinity: None
  ports:
    - port: 3306
#      protocol: TCP
      targetPort: 3306
